<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- General -->
    <string name="app_name">Unit4Example</string>
	<!-- ******* -->

	<!-- MainActivity -->
    <string name="button_download_service">Descarregar fitxer</string>
    <string name="button_list_activity">Llista d\'aplicacions</string>
    <string name="button_data_service">Carregar BBDD</string>
    <string name="button_notification_service">Llençar notificacio</string>
    <string name="activity_4_2">Activitat 4.2</string>
    <string name="activity_4_3">Activitat 4.3</string>
    <string name="activity_4_4">Activitat 4.4</string>
    <!-- ************ -->
    
    <!-- Form Layout -->
    <string name="textview_form_name">Nom: </string>
    <string name="textview_form_developer">Desenvolupador: </string>
    <string name="textview_form_date">Data: </string>
    <string name="textview_form_url">URL: </string>
	<!-- ************* -->
	

</resources>